k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wiz-exercise
  labels:
    app.kubernetes.io/managed-by: kubectl
